Added folder structures and html files

--- a/index.html
+++ b/index.html
@@ -1,20 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<title>Page Title</title>
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="">
-<style>
-</style>
-<script src=""></script>
 
+<head>
+	<title>Yanbin's Personal Website</title>
+	<link rel="stylesheet" href="style.css">
+</head>
 
-	<!--- Code above this line will not be displayed on the browser --> 
+<body>
+	<header>
+		<nav class="nav_bar">
+			<ul>
+				<li><a href="/index.html">Home</a></li>
+				<li><a href="">Astronomy</a></li>
+				<li><a href="">Math</a></li>
+				<li><a href="">Books</a></li>
+				<li><a href="">Movies</a></li>
+			</ul>
+		</nav>
+	</header>
+	
+	<div class="float_right">
+		<img src="photo.jpeg" width="550px" height="300px" alt="A photo of me">
+	</div>
 
-	<body>
+	<h2>About Me:</h2>
+	<p>
+		My name is Yanbin Cheng. I am a sophomore majoring in Computer Science and Mathematics at University of Wisconsin-Madison. My hobbies include reading science fictions and playing video games. I also enjoy playing badminton in my spare time. 
+	</p>
 
-		<p> Hello world! My name is Yanbin Cheng. </p>
+	<h2>About This Website:</h2>
+	<p>
+		This website is similar to a personal blog. I would use it to share various interesting knowledge about Math and Astronomy. I also want to recommend several science fiction novels and present some beautiful pictures of my hometown on this website. This website is quite useful for those who are interested in exploring Math and Astronomy. Users that are searching for excellent fiction books can also refer to this website. In addition, audience can learn more about my hometown. 
+	</p>
 
-	</body>
+	<br/>
+
+	<footer>
+		<p>
+			<strong>Contact information</strong> <br/>
+			<i>Name: </i>Yanbin Cheng <br/>
+			<i>Email: </i>cheng254@wisc.edu <br/>
+		</p>
+	</footer>
+</body>
 
 </html>
