Updated html and css files

--- a/books/books.html
+++ b/books/books.html
@@ -12,10 +12,10 @@
 		<nav class="nav_bar">
 			<ul>
 				<li><a href="/index.html">Home</a></li>
-				<li><a href="">Astronomy</a></li>
-				<li><a href="">Math</a></li>
-				<li><a href="">Books</a></li>
-				<li><a href="">Movies</a></li>
+				<li><a href="/astronomy/astronomy.html">Astronomy</a></li>
+				<li><a href="/math/math.html">Math</a></li>
+				<li><a href="/books/books.html">Books</a></li>
+				<li><a href="/hometown/hometown.html">Hometown</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -30,7 +30,13 @@
         <li><i>Ender's Game</i> by Orson Scott Card</li>
         <li><i>Twenty Thousand Leagues Under the Sea</i> by Jules Verne</li>
         <li><i>The Three-Body Problem</i> by Cixin Liu</li>
+        <li><i>Story of Your Life</i> by Ted Chiang</li>
+        <li><i>The Martian Chronicles</i> by Ray Bradbury</li>
     </ol>
+
+    <p class="ht">
+        All these science fictions are famous award-winning novels. Personally, I prefer <i>The Three-Body Problem</i> the most because it introduces a lot of physics and astronomy knowledge, including proven laws and hypotheses. <i>Twenty Thousand Leagues Under the Sea</i> is also amazing as I enjoy reading adventure novels too. Anyway, all these fiction books are undoubtedly well worth reading. 
+    </p>
 
 	<br/>
 
