--- a/math/math.html
+++ b/math/math.html
@@ -12,10 +12,10 @@
 		<nav class="nav_bar">
 			<ul>
 				<li><a href="/index.html">Home</a></li>
-				<li><a href="">Astronomy</a></li>
-				<li><a href="">Math</a></li>
-				<li><a href="">Books</a></li>
-				<li><a href="">Movies</a></li>
+				<li><a href="/astronomy/astronomy.html">Astronomy</a></li>
+				<li><a href="/math/math.html">Math</a></li>
+				<li><a href="/books/books.html">Books</a></li>
+				<li><a href="/hometown/hometown.html">Hometown</a></li>
 			</ul>
 		</nav>
 	</header>
