Fixed some errors

--- a/astronomy/astronomy.html
+++ b/astronomy/astronomy.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
 
 <head>
+    <meta charset="UTF-8">
 	<title>Astronomy</title>
     <link rel="stylesheet" href="../style.css">
 </head>
@@ -20,13 +20,13 @@
 		</nav>
 	</header>
 
-    <div class="float_right">
-        <img src="blackhole.jpg" alt="Sagittarius A*, the supermassive black hole at the Galactic Center of Milky Way" width="350px" height="350px"/>
+    <figure class="float_right">
+        <img src="blackhole.jpg" alt="Sagittarius A*, the supermassive black hole at the Galactic Center of Milky Way" width="350" height="350"/>
         <figcaption>
             Sagittarius A*, a supermassive black hole <br/>
             Photo by NASA Marshall at <a href="https://live.staticflickr.com/65535/52070907639_7c5409cfd0_4k.jpg">flickr</a>, CC BY-NC 2.0
         </figcaption>
-    </div>
+    </figure>
 
     <h2>Some Interesting Astronomy Knowledge</h2>
 
