--- a/hometown/hometown.html
+++ b/hometown/hometown.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
 
 <head>
+    <meta charset="UTF-8">
 	<title>My Hometown</title>
     <link rel="stylesheet" href="../style.css">
 </head>
@@ -27,8 +27,8 @@
     </p>
 
     <div class="container">
-        <img class="image" src="lujiazui.jpeg" width="600px" height="400px" alt="The Bund, Shanghai, China"/>
-        <img class="image" src="disneyland.jpeg" width="400px" height="400px" alt="The Disneyland Park, Shanghai, China"/>     
+        <img class="image" src="lujiazui.jpeg" width="600" height="400" alt="The Bund, Shanghai, China"/>
+        <img class="image" src="disneyland.jpeg" width="400" height="400" alt="The Disneyland Park, Shanghai, China"/>     
     </div>
     
     <br/>
