--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
 
 <head>
+	<meta charset="UTF-8">
 	<title>Yanbin's Personal Website</title>
 	<link rel="stylesheet" href="style.css">
 </head>
@@ -21,7 +21,7 @@
 	</header>
 	
 	<div class="float_right">
-		<img src="photo.jpeg" width="550px" height="300px" alt="A photo of me">
+		<img src="photo.jpeg" width="550" height="300" alt="A photo of me">
 	</div>
 
 	<h2>About Me:</h2>
