Updated html and css files

--- a/astronomy/astronomy.html
+++ b/astronomy/astronomy.html
@@ -21,14 +21,16 @@
 	</header>
 
     <figure class="float_right">
-        <img src="blackhole.jpg" alt="Sagittarius A*, the supermassive black hole at the Galactic Center of Milky Way" width="350" height="350"/>
+        <img src="blackhole.jpg" alt="Sagittarius A*, the supermassive black hole at the Galactic Center of Milky Way" width="500" height="500"/>
         <figcaption>
             Sagittarius A*, a supermassive black hole <br/>
             Photo by NASA Marshall at <a href="https://live.staticflickr.com/65535/52070907639_7c5409cfd0_4k.jpg">flickr</a>, CC BY-NC 2.0
         </figcaption>
     </figure>
 
-    <h2>Some Interesting Astronomy Knowledge</h2>
+    <div style="text-align: center;">
+        <h2>Some Interesting Astronomy Knowledge</h2>
+    </div>
 
     <h3>Formation and basic properties of neutron stars and black holes</h3>
 
@@ -59,7 +61,7 @@
 
 	<footer>
 		<p>
-			<strong>Contact information</strong> <br/>
+			<b>Contact information</b> <br/>
 			<i>Name: </i>Yanbin Cheng <br/>
 			<i>Email: </i>cheng254@wisc.edu <br/>
 		</p>
