--- a/books/books.html
+++ b/books/books.html
@@ -19,8 +19,10 @@
 			</ul>
 		</nav>
 	</header>
-
-    <h2>Sci-fi Books Recommendation</h2>
+	
+	<div style="text-align: center;">
+    	<h2>Sci-fi Books Recommendation</h2>
+	</div>
 
     <h3>A brief list of my favorite sci-fi books:</h3>
 
@@ -34,7 +36,7 @@
         <li><i>The Martian Chronicles</i> by Ray Bradbury</li>
     </ol>
 
-    <p class="ht">
+    <p style="max-width: 1000px; padding: 5px 30px 5px 30px; font-size: 18px;">
         All these science fictions are famous award-winning novels. Personally, I prefer <i>The Three-Body Problem</i> the most because it introduces a lot of physics and astronomy knowledge, including proven laws and hypotheses. <i>Twenty Thousand Leagues Under the Sea</i> is also amazing as I enjoy reading adventure novels too. Anyway, all these fiction books are undoubtedly well worth reading. 
     </p>
 
@@ -42,7 +44,7 @@
 
 	<footer>
 		<p>
-			<strong>Contact information</strong> <br/>
+			<b>Contact information</b> <br/>
 			<i>Name: </i>Yanbin Cheng <br/>
 			<i>Email: </i>cheng254@wisc.edu <br/>
 		</p>
