--- a/hometown/hometown.html
+++ b/hometown/hometown.html
@@ -20,20 +20,22 @@
 		</nav>
 	</header>
 
-    <h2>My hometown: Shanghai, China</h2>
+    <div style="text-align: center;">
+		<h2>My hometown: Shanghai, China</h2>
+	</div>
 
-    <p>
-        I will share pictures of some famous sceneries and briefly introduce them. 
+    <p style="max-width:1000px; padding: 5px 30px 5px 30px; color: darkcyan; font-size: 18px;">
+        I will share pictures of some famous sceneries and briefly introduce them:
     </p>
 
     <div class="container">
-        <img class="image" src="lujiazui.jpeg" width="600" height="400" alt="The Bund, Shanghai, China"/>
-        <img class="image" src="disneyland.jpeg" width="400" height="400" alt="The Disneyland Park, Shanghai, China"/>     
+        <img class="image" src="lujiazui.jpeg" width="675" height="450" alt="The Bund, Shanghai, China"/>
+        <img class="image" src="disneyland.jpeg" width="450" height="450" alt="The Disneyland Park, Shanghai, China"/>     
     </div>
     
     <br/>
     
-    <p class="ht">
+    <p style="max-width: 1000px; padding: 5px 30px 5px 30px; font-size: 18px;">
         The left one is the night view of Lujiazui, the famous financial zone and tourist attraction by the Huangpu River. <br/><br/>
         The right one is the night view of Shanghai Disneyland Park, which opened about 7 years ago. 
     </p>
@@ -42,7 +44,7 @@
 
 	<footer>
 		<p>
-			<strong>Contact information</strong> <br/>
+			<b>Contact information</b> <br/>
 			<i>Name: </i>Yanbin Cheng <br/>
 			<i>Email: </i>cheng254@wisc.edu <br/>
 		</p>
