--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</header>
 	
 	<div class="float_right">
-		<img src="photo.jpeg" width="550" height="300" alt="A photo of me">
+		<img src="photo.jpeg" width="700" height="400" alt="A photo of me">
 	</div>
 
 	<h2>About Me:</h2>
@@ -38,7 +38,7 @@
 
 	<footer>
 		<p>
-			<strong>Contact information</strong> <br/>
+			<b>Contact information</b> <br/>
 			<i>Name: </i>Yanbin Cheng <br/>
 			<i>Email: </i>cheng254@wisc.edu <br/>
 		</p>
