--- a/math/math.html
+++ b/math/math.html
@@ -20,7 +20,9 @@
 		</nav>
 	</header>
 
-    <h2>Some Interesting Math Knowledge</h2>
+	<div style="text-align: center;">
+    	<h2>Some Interesting Math Knowledge</h2>
+	</div>
 
     <h3>A counter-intuitive probability problem</h3>
 
@@ -46,7 +48,7 @@
 
 	<footer>
 		<p>
-			<strong>Contact information</strong> <br/>
+			<b>Contact information</b> <br/>
 			<i>Name: </i>Yanbin Cheng <br/>
 			<i>Email: </i>cheng254@wisc.edu <br/>
 		</p>
